채팅하기 데모 구현

--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.5.7'
+
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
+
 }
 
 tasks.named('test') {
