--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb-reactive'
 
+    //Base64
+    implementation 'commons-codec:commons-codec:1.15'
+
 }
 
 tasks.named('test') {
