refactor: @CurrentMember ArgumentResolver 구현으로 컨트롤러 중복 코드 제거 - CurrentMember 어노테이션 및 ArgumentResolver 추가 - 17개 컨트롤러 메서드에서 중복된 Member 조회 로직 제거 - ReviewController, ProfileController, SaleController 등 8개 컨트롤러 리팩토링 - 34줄 이상의 보일러플레이트 코드 삭제로 가독성 향상 - 사용하지 않는 import 및 필드 정리

--- a/build.gradle
+++ b/build.gradle
@@ -48,3 +48,14 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+// bootRun 전에 자동으로 clean 수행
+tasks.named('bootRun') {
+    dependsOn 'clean'
+}
+
+// 컴파일 전에 이전 빌드 출력 정리
+tasks.named('compileJava') {
+    options.incremental = true
+}
+
